@@ -1,3 +1,11 @@
+2010-11-17  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	Fix spurious failures of silent-rules tests with Sun Fortran.
+	* tests/silentf77.test: Strip from the make output some verbose
+	messages possibly printed by the SunStudio fortran compilers, to
+	avoid spurious failures.  Add a trailing `:' command.
+	* tests/silentf90.test: Likewise.
+
 2010-06-06  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	New tests for Automake silent-mode with Fortran.
